fix: left-align imprint on small breakpoint

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -372,9 +372,9 @@ em {
   align-items: center;
   justify-content: center;
   .imprint-box {
+    width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     h1 {
       color: #f7f7f7;
       font-family: 'space-grotesk-bold';
@@ -386,6 +386,9 @@ em {
       strong {
         font-family: 'space-grotesk-bold';
       }
+    }
+    @include media.sm {
+      align-items: center;
     }
   }
 }
